Fix intro section spacing, video artifact

--- a/src/sass/about/index.scss
+++ b/src/sass/about/index.scss
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   gap: 4em;
-  margin-top: 8dvw;
 }
 
 .about-card-content {
