--- a/src/sass/portfolio_page/index.scss
+++ b/src/sass/portfolio_page/index.scss
@@ -36,7 +36,7 @@
 .portfolio-container {
   display: flex;
   flex-direction: column;
-  gap: 10dvw;
+  gap: 9.375em;
   height: min-content;
 }
 
